[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-connector-vdisplay"
version = "0.1.0"
description = "Native vdisplay:// URI surface over the vdisplay package (windows/monitors/session enumeration with nl) for ifuri and urirun"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Tom Sapletta" }]
dependencies = ["urirun>=0.4.14", "vdisplay>=0.1.0"]

[project.scripts]
urirun-vdisplay = "urirun_connector_vdisplay.core:main"

[project.entry-points."urirun.bindings"]
vdisplay = "urirun_connector_vdisplay.core:urirun_bindings"

[tool.setuptools.packages.find]
include = ["urirun_connector_vdisplay*"]

[tool.setuptools.package-data]
urirun_connector_vdisplay = ["connector.manifest.json"]
